--- a/assets/kv/speed.kv
+++ b/assets/kv/speed.kv
@@ -271,26 +271,29 @@
 
 <brakeLever>
     RelativeLayout:
-        size_hint: 1, 1
-        pos: 0, 700
-        size: self.width, 100
+        size_hint: None, None
+        pos_hint: {'center_x':  .5, 'top': 1}
+        size: (480, 72)
+        pos: (0, -100)
 
         Widget:
             size_hint: None, None
+            pos_hint: {'top':  1, 'left': 1}
             size: self.width, 72
-            pos: 28, 0
 
             RelativeLayout:
                 id: breakLeverRight
-                pos_hint: {'left': 1, 'top': 1}
+                pos_hint: {'left': 1}
+                size_hint: None, None
                 size: 240, 72
-                pos: 240, 0
+                pos: (self.width/2 + 93, 0)
 
                 Widget:
                     id: breakLeverRight_0
-                    pos_hint: {'left': 1, 'top': 1}
+                    pos_hint: {'center_y': .5, 'x': 3/4}
                     size_hint: None, None
                     size: (186, 72)
+                    pos: (0, 0)
                     canvas:
                         Color:
                             rgba: 1, 1, 0, 1
@@ -301,9 +304,10 @@
 
                 Widget:
                     id: breakLeverRight_1
-                    pos_hint: {'left': .75, 'top': 1}
+                    pos_hint: {'center_y': .5, 'x': 2/4}
                     size_hint: None, None
                     size: (186, 72)
+                    pos: (0, 0)
                     canvas:
                         Color:
                             rgba: 1, 1, 0, 1
@@ -314,9 +318,10 @@
 
                 Widget:
                     id: breakLeverRight_2
-                    pos_hint: {'left': 1, 'top': 1}
+                    pos_hint: {'center_y': .5, 'x': 1/4}
                     size_hint: None, None
                     size: (186, 72)
+                    pos: (0, 0)
                     canvas:
                         Color:
                             rgba: 1, 1, 0, 1
@@ -327,9 +332,10 @@
 
                 Widget:
                     id: breakLeverRight_3
-                    pos_hint: {'left': 1, 'top': 1}
+                    pos_hint: {'center_y': .5, 'x': 0}
                     size_hint: None, None
                     size: (186, 72)
+                    pos: (0, 0)
                     canvas:
                         Color:
                             rgba: 1, 1, 0, 1
@@ -340,18 +346,20 @@
 
             RelativeLayout:
                 id: breakLeverLeft
-                pos_hint: {'left': 1, 'top': 1}
+                pos_hint: {'left': 1}
+                size_hint: None, None
                 size: 240, 72
-                pos: 0, 0
+                pos: (-93, 0)
 
                 Widget:
                     id: breakLeverLeft_0
-                    pos_hint: {'right': 1, 'top': 1}
+                    pos_hint: {'center_y': .5, 'x': 0}
                     size_hint: None, None
                     size: (186, 72)
+                    pos: (0, 0)
                     canvas:
                         Color:
-                            rgba: 1, 0, 1, 1
+                            rgba: 1, 1, 0, 1
                         Rectangle:
                             source: 'assets/img/brake_left@2x.png'
                             pos: self.pos
@@ -359,9 +367,10 @@
 
                 Widget:
                     id: breakLeverLeft_1
-                    pos_hint: {'right': 3/4, 'top': 1}
+                    pos_hint: {'center_y': .5, 'x': 1/4}
                     size_hint: None, None
                     size: (186, 72)
+                    pos: (0, 0)
                     canvas:
                         Color:
                             rgba: 1, 1, 0, 1
@@ -372,9 +381,10 @@
 
                 Widget:
                     id: breakLeverLeft_2
-                    pos_hint: {'right': 1/2, 'top': 1}
+                    pos_hint: {'center_y': .5, 'x': 2/4}
                     size_hint: None, None
                     size: (186, 72)
+                    pos: (0, 0)
                     canvas:
                         Color:
                             rgba: 1, 1, 0, 1
@@ -385,9 +395,10 @@
 
                 Widget:
                     id: breakLeverLeft_3
-                    pos_hint: {'right': 1/4, 'top': 1}
+                    pos_hint: {'center_y': .5, 'x': 3/4}
                     size_hint: None, None
                     size: (186, 72)
+                    pos: (0, 0)
                     canvas:
                         Color:
                             rgba: 1, 1, 0, 1
@@ -397,12 +408,12 @@
                             size: self.size
 
             RelativeLayout:
-                id: breakLeverRight
+                pos_hint: {'top': 0, 'left': 0}
                 size: 480, 72
                 pos: 0, 0
 
                 Widget:
-                    id: breaklever
+                    id: breakLeverMessage
                     pos_hint: {'center_x': .5, 'center_y': .5}
                     size_hint: None, None
                     size: 188, 32
