Fixed brake indicator

--- a/assets/kv/speed.kv
+++ b/assets/kv/speed.kv
@@ -270,7 +270,7 @@
                         size: 312/2, 508/2
 
 <brakeLever>
-    RelativeLayout:
+    FloatLayout:
         size_hint: None, None
         pos_hint: {'center_x':  .5, 'top': 1}
         size: (480, 72)
