Fixed brake indicator

--- a/assets/kv/speed.kv
+++ b/assets/kv/speed.kv
@@ -270,11 +270,10 @@
                         size: 312/2, 508/2
 
 <brakeLever>
-    FloatLayout:
+    RelativeLayout:
         size_hint: None, None
-        pos_hint: {'center_x':  .5, 'top': 1}
         size: (480, 72)
-        pos: (0, 0)
+        pos: (0, 708)  # fix later
 
         Widget:
             size_hint: None, None
