--- a/assets/kv/speed.kv
+++ b/assets/kv/speed.kv
@@ -273,7 +273,7 @@
     RelativeLayout:
         size_hint: None, None
         size: (480, 72)
-        pos: (0, 708)  # fix later
+        pos: (0, 708) # fix later, ok?
 
         Widget:
             size_hint: None, None
@@ -285,28 +285,15 @@
                 pos_hint: {'left': 1}
                 size_hint: None, None
                 size: 240, 72
-                pos: (self.width/2 + 93, 0)
-
-                Widget:
-                    id: breakLeverRight_0
-                    pos_hint: {'center_y': .5, 'x': 3/4}
-                    size_hint: None, None
-                    size: (186, 72)
-                    pos: (0, 0)
-                    canvas:
-                        Color:
-                            rgba: 1, 1, 0, 1
-                        Rectangle:
-                            source: 'assets/img/brake_right@2x.png'
-                            pos: self.pos
-                            size: self.size
+                pos: (self.width/2 + 20, 0)
 
                 Widget:
                     id: breakLeverRight_1
-                    pos_hint: {'center_y': .5, 'x': 2/4}
+                    pos_hint: {'center_y': .5, 'x': 1/4}
                     size_hint: None, None
                     size: (186, 72)
                     pos: (0, 0)
+                    opacity: .2
                     canvas:
                         Color:
                             rgba: 1, 1, 0, 1
@@ -317,10 +304,11 @@
 
                 Widget:
                     id: breakLeverRight_2
-                    pos_hint: {'center_y': .5, 'x': 1/4}
+                    pos_hint: {'center_y': .5, 'x': 2/4}
                     size_hint: None, None
                     size: (186, 72)
                     pos: (0, 0)
+                    opacity: .2
                     canvas:
                         Color:
                             rgba: 1, 1, 0, 1
@@ -331,10 +319,26 @@
 
                 Widget:
                     id: breakLeverRight_3
-                    pos_hint: {'center_y': .5, 'x': 0}
+                    pos_hint: {'center_y': .5, 'x': 3/4}
                     size_hint: None, None
                     size: (186, 72)
                     pos: (0, 0)
+                    opacity: .2
+                    canvas:
+                        Color:
+                            rgba: 1, 1, 0, 1
+                        Rectangle:
+                            source: 'assets/img/brake_right@2x.png'
+                            pos: self.pos
+                            size: self.size
+
+                Widget:
+                    id: breakLeverRight_4
+                    pos_hint: {'center_y': .5, 'x': 4/4}
+                    size_hint: None, None
+                    size: (186, 72)
+                    pos: (0, 0)
+                    opacity: .2
                     canvas:
                         Color:
                             rgba: 1, 1, 0, 1
@@ -348,26 +352,13 @@
                 pos_hint: {'left': 1}
                 size_hint: None, None
                 size: 240, 72
-                pos: (-93, 0)
-
-                Widget:
-                    id: breakLeverLeft_0
-                    pos_hint: {'center_y': .5, 'x': 0}
-                    size_hint: None, None
-                    size: (186, 72)
-                    pos: (0, 0)
-                    canvas:
-                        Color:
-                            rgba: 1, 1, 0, 1
-                        Rectangle:
-                            source: 'assets/img/brake_left@2x.png'
-                            pos: self.pos
-                            size: self.size
+                pos: (0, 0)
 
                 Widget:
                     id: breakLeverLeft_1
-                    pos_hint: {'center_y': .5, 'x': 1/4}
+                    pos_hint: {'center_y': .5, 'center_x': 1-(1/4)}
                     size_hint: None, None
+                    opacity: .2
                     size: (186, 72)
                     pos: (0, 0)
                     canvas:
@@ -380,10 +371,11 @@
 
                 Widget:
                     id: breakLeverLeft_2
-                    pos_hint: {'center_y': .5, 'x': 2/4}
+                    pos_hint: {'center_y': .5, 'center_x': 1-(2/4)}
                     size_hint: None, None
                     size: (186, 72)
                     pos: (0, 0)
+                    opacity: .2
                     canvas:
                         Color:
                             rgba: 1, 1, 0, 1
@@ -394,10 +386,26 @@
 
                 Widget:
                     id: breakLeverLeft_3
-                    pos_hint: {'center_y': .5, 'x': 3/4}
+                    pos_hint: {'center_y': .5, 'center_x': 1-(3/4)}
                     size_hint: None, None
                     size: (186, 72)
                     pos: (0, 0)
+                    opacity: .2
+                    canvas:
+                        Color:
+                            rgba: 1, 1, 0, 1
+                        Rectangle:
+                            source: 'assets/img/brake_left@2x.png'
+                            pos: self.pos
+                            size: self.size
+
+                Widget:
+                    id: breakLeverLeft_4
+                    pos_hint: {'center_y': .5, 'center_x': 1-(4/4)}
+                    size_hint: None, None
+                    size: (186, 72)
+                    pos: (0, 0)
+                    opacity: .2
                     canvas:
                         Color:
                             rgba: 1, 1, 0, 1
@@ -410,6 +418,13 @@
                 pos_hint: {'top': 0, 'left': 0}
                 size: 480, 72
                 pos: 0, 0
+                # canvas:
+                #     Color:
+                #         rgba: 1, 1, 1, .3
+                #     Rectangle:
+                #         # source: 'assets/img/brake_message@2x.png'
+                #         pos: self.pos
+                #         size: self.size
 
                 Widget:
                     id: breakLeverMessage
