--- a/assets/kv/speed.kv
+++ b/assets/kv/speed.kv
@@ -2,6 +2,64 @@
 #:import kivy kivy
 #:import win kivy.core.window
 
+
+<statusBar>
+    RelativeLayout:
+        size_hint: None, None
+        size: (480, 68)
+        pos: (0, 0) # fix later, ok?
+        canvas:
+            Color:
+                rgba: .1, .1, .1, 1
+            Rectangle:
+                # source: 'assets/img/brake_right@2x.png'
+                pos: self.pos
+                size: self.size
+
+        Label:
+            id: connectionStatus
+            text: root.var1
+            pos_hint: {'center_x':  .5, 'center_y': .5}
+            size_hint: None, None
+
+        # Widget:
+        #     id: connectionStatus
+        #     size_hint: None, None
+        #     pos_hint: {'center_x':  .5, 'center_y': .5}
+        #     size: (480, 68)
+        #     canvas:
+        #         Rectangle:
+        #             pos: self.pos
+        #             size: self.size
+
+            # RelativeLayout:
+            #     id: breakLeverRight
+            #     pos_hint: {'left': 1}
+            #     size_hint: None, None
+            #     size: 240, 72
+            #     pos: (self.width/2 + 20, 0)
+            #     canvas:
+            #         Color:
+            #             rgba: 1, 1, 0, 1
+            #         Rectangle:
+            #             # source: 'assets/img/brake_right@2x.png'
+            #             pos: self.pos
+            #             size: self.size
+
+            #     Widget:
+            #         id: breakLeverRight_1
+            #         pos_hint: {'center_y': .5, 'x': 1/4}
+            #         size_hint: None, None
+            #         size: (186, 72)
+            #         pos: (0, 0)
+            #         canvas:
+            #             Color:
+            #                 rgba: 1, 1, 0, 1
+            #             Rectangle:
+            #                 # source: 'assets/img/brake_right@2x.png'
+            #                 pos: self.pos
+            #                 size: self.size
+
 <speedoMeter>
     canvas:
         Color:
