--- a/assets/kv/speed.kv
+++ b/assets/kv/speed.kv
@@ -18,7 +18,7 @@
 
         Label:
             id: connectionStatus
-            text: root.var1
+            text: 'root.var1'
             pos_hint: {'center_x':  .5, 'center_y': .5}
             size_hint: None, None
 
