--- a/assets/kv/speed.kv
+++ b/assets/kv/speed.kv
@@ -10,7 +10,7 @@
         pos: (0, 0) # fix later, ok?
         canvas:
             Color:
-                rgba: .1, .1, .1, 1
+                rgba: 1, 0.949, 0.796, .15
             Rectangle:
                 # source: 'assets/img/brake_right@2x.png'
                 pos: self.pos
@@ -18,7 +18,10 @@
 
         Label:
             id: connectionStatus
-            text: 'root.var1'
+            text: 'No connection'
+            font_name: 'InterUI'
+            bold: True
+            font_size: 28
             pos_hint: {'center_x':  .5, 'center_y': .5}
             size_hint: None, None
 
