--- a/assets/kv/speed.kv
+++ b/assets/kv/speed.kv
@@ -17,12 +17,21 @@
                 size: self.size
 
         Label:
-            id: connectionStatus
+            id: statusConnection
             text: 'No connection'
             font_name: 'InterUI'
             bold: True
             font_size: 28
             pos_hint: {'center_x':  .5, 'center_y': .5}
+            size_hint: None, None
+
+        Label:
+            id: statusTime
+            text: '00:00'
+            font_name: 'InterUI'
+            bold: True
+            font_size: 28
+            pos_hint: {'center_y': .5}
             size_hint: None, None
 
         # Widget:
