--- a/assets/kv/speed.kv
+++ b/assets/kv/speed.kv
@@ -336,6 +336,7 @@
                     pos_hint: {'center_y': .5, 'x': 1/4}
                     size_hint: None, None
                     size: (186, 72)
+                    opacity: 0
                     pos: (0, 0)
                     canvas:
                         Color:
@@ -350,6 +351,7 @@
                     pos_hint: {'center_y': .5, 'x': 2/4}
                     size_hint: None, None
                     size: (186, 72)
+                    opacity: 0
                     pos: (0, 0)
                     canvas:
                         Color:
@@ -364,6 +366,7 @@
                     pos_hint: {'center_y': .5, 'x': 3/4}
                     size_hint: None, None
                     size: (186, 72)
+                    opacity: 0
                     pos: (0, 0)
                     canvas:
                         Color:
@@ -378,6 +381,7 @@
                     pos_hint: {'center_y': .5, 'x': 4/4}
                     size_hint: None, None
                     size: (186, 72)
+                    opacity: 0
                     pos: (0, 0)
                     canvas:
                         Color:
@@ -399,6 +403,7 @@
                     pos_hint: {'center_y': .5, 'center_x': 1-(1/4)}
                     size_hint: None, None
                     size: (186, 72)
+                    opacity: 0
                     pos: (0, 0)
                     canvas:
                         Color:
@@ -413,6 +418,7 @@
                     pos_hint: {'center_y': .5, 'center_x': 1-(2/4)}
                     size_hint: None, None
                     size: (186, 72)
+                    opacity: 0
                     pos: (0, 0)
                     canvas:
                         Color:
@@ -427,6 +433,7 @@
                     pos_hint: {'center_y': .5, 'center_x': 1-(3/4)}
                     size_hint: None, None
                     size: (186, 72)
+                    opacity: 0
                     pos: (0, 0)
                     canvas:
                         Color:
@@ -441,6 +448,7 @@
                     pos_hint: {'center_y': .5, 'center_x': 1-(4/4)}
                     size_hint: None, None
                     size: (186, 72)
+                    opacity: 0
                     pos: (0, 0)
                     canvas:
                         Color:
